--- a/web/css/icon/iconfont.css
+++ b/web/css/icon/iconfont.css
@@ -1,8 +1,10 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 2602446 */
-  src: url('iconfont.woff2?t=1623219365896') format('woff2'),
-       url('iconfont.woff?t=1623219365896') format('woff'),
-       url('iconfont.ttf?t=1623219365896') format('truetype');
+  font-family: "iconfont"; /* Project id 2626485 */
+  /* Color fonts */
+  src: 
+       url('iconfont.woff2?t=1624356074981') format('woff2'),
+       url('iconfont.woff?t=1624356074981') format('woff'),
+       url('iconfont.ttf?t=1624356074981') format('truetype');
 }
 
 .iconfont {
@@ -13,7 +15,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-dianzan:before {
+.icon-ts:before {
+  content: "\e664";
+}
+
+.icon-wenjian:before {
+  content: "\e61e";
+}
+
+.icon-html:before {
+  content: "\e61c";
+}
+
+.icon-txt:before {
+  content: "\e64b";
+}
+
+.icon-dir:before {
+  content: "\e64e";
+}
+
+.icon-css:before {
+  content: "\e618";
+}
+
+.icon-js:before {
+  content: "\e619";
+}
+
+.icon-json:before {
   content: "\e61a";
+}
+
+.icon-vue:before {
+  content: "\e61b";
 }
 
