--- a/web/css/index.scss
+++ b/web/css/index.scss
@@ -1,8 +1,4 @@
-@import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
 @import './element-ui.scss';
-@import './sidebar.scss';
 
 body {
   height: 100%;
@@ -10,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  overflow: hidden;
+  margin: 0;
 }
 
 label {
