--- a/web/css/index.scss
+++ b/web/css/index.scss
@@ -61,3 +61,22 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+
+.hljs {
+  line-height: 30px;
+}
+
+* {
+  outline: none;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: rgb(241, 241, 241);
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgb(41, 77, 126);
+  border-radius: 2px;
+}
